--- a/www/.project
+++ b/www/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>www</name>
+	<name>s2jface-www</name>
 	<comment></comment>
 	<projects>
 	</projects>
